Name: pipes-zmq4
Version: 1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Pierre Radermecker
Author: Pierre Radermecker
Maintainer: PierreR@pi3r.com
Bug-Reports: https://github.com/PierreR/zpipes
Tested-With: GHC == 7.6.3
Synopsis: Pipes/ZMQ bridge
Description:
Category: System, Pipes
Source-Repository head
    Type: git
    Location: https://github.com/PierreR/zpipes

Library
    default-language: Haskell2010
    Hs-Source-Dirs: src
    Build-Depends:
        base             >= 4.3     && < 5,
        binary,
        bytestring       >= 0.10    && < 0.11,
        pipes            >= 4.0     && < 4.1,
        zeromq4-haskell  >= 0.1     && < 0.2
    Exposed-Modules: Pipes.ZMQ4
    GHC-Options: -O2

executable sub
  default-language: Haskell2010
  main-is:  sub.hs
  build-depends:  async >= 2,
                  base >= 4,
                  bytestring,
                  foldl             >= 1.0     && < 1.1,
                  lens >= 3.10,
                  pipes             >= 4.0     && < 4.1,
                  pipes-parse       >= 3.0.0   && < 3.1,
                  pipes-zmq4        >= 1.0     && < 2.0,
                  transformers,
                  random,
                  zeromq4-haskell  >= 0.1

executable echo
  default-language: Haskell2010
  main-is:  echo.hs
  build-depends:  async >= 2,
                  base >= 4,
                  bytestring,
                  foldl             >= 1.0.1 && < 1.1,
                  pipes             >= 4.0   && < 4.1,
                  pipes-zmq4        >= 1.0   && < 2.0,
                  transformers,
                  random,
                  zeromq4-haskell   >= 0.1
  ghc-options:     -Wall -fno-warn-unused-do-bind
